# suvinil-colors

./: .gitignore  Dockerfile  README.md  app.py  olho_da_mel.py  packages.txt  pyproject.toml  requirements.txt  suvinil_colors.json  suvinil_colors.xlsx  suvinil_crawler.py  test_color_page.html  test_page.html  try.py
.streamlit/: config.toml
