[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pillow==9.5.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "olho-da-mel"
version = "1.0.0"
description = "Encontrador de cores similares Suvinil"
requires-python = "==3.10.*"
dependencies = [
    "streamlit==1.32.2",
    "pillow==9.5.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "pandas==2.2.0",
    "python-dotenv==1.0.1",
    "tqdm==4.66.2",
    "selenium==4.18.1",
    "webdriver-manager==4.0.1"
]

[tool.setuptools]
packages = ["."]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.json", "*.png", "*.jpg", "*.xlsx", "*.html"]

[options]
include_package_data = true 